ghidra: Extract JSON w/ pcode from the docker container.